# bdif

./: AA.in.csv  config.q  symbol  test.q
hw1/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  build.sh  cmake_install.cmake  gitcloneglog.pbs  hw1.cpp  noise.txt  readme  readme.normal  readme.run  readme.scrub  scrub  scrub.pbs  scrub_log.txt  small  test_normality_log.txt  test_normality_result.txt
hw1/include/: myutil.h  record_parser.h  shell.h
hw1/lib/: libglog.la  libglog.so.0.0.0
hw1/lib/pkgconfig/: libglog.pc
hw1/unit_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  log  mpi_rw.cpp  mpi_rw_test  recblk_test  recblk_test.cpp  recblk_test.out  split_str.cpp  split_str_test  test.in  timer_test  timer_test.cpp
hw2/: AA.in.csv  AA.out.csv  README  config.q  hw2.q  symbol
hw3/: README  Third_step.py  gen_sentiment_dic.py  good_bad.py  hw1.py  hw3.py  log  part-00004  second_step.py  step1.py  step3.py  test3.py  words.txt  wraptest.py
hw3/data/step3/: part-00000  part-00001
hw3/data_sample/stock_ret/: stockreturn.txt
hw3/pred/: run_prediction.sh  step1_gen_pred_input.py
hw3/prediction/: step2_prediction.py
hw3/train/: run_train.sh  step2.py  step3.py  step4_train_model.py  yahoo_quotes.py
