cmake_minimum_required(VERSION 2.6)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}")
SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
SET(GCC_COVERAGE_LINK_FLAGS "-pthread -Wl,-rpath -Wl,/home/mzhou/mylib/openmpi/lib -Wl,--enable-new-dtags -L/home/mzhou/mylib/openmpi/lib -lmpi_cxx -lmpi -lopen-rte -lopen-pal -lutil -lnsl -ldl -lmca_common_sm -lvt -Wl,--export-dynamic -L lib")
SET( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}" )

PROJECT(option)
FILE(GLOB SOURCE "./hw1.cpp")
INCLUDE_DIRECTORIES("/home/mzhou/mylib/openmpi/include" "include") 
LINK_DIRECTORIES("/home/mzhou/mylib/openmpi/lib" "${boost_home}/stage/lib")
SET(LIBS ${LIBS} "lib")
#find_package(GSL REQUIRED)
#include_directories(${GSL_INCLUDE_DIRS} ${GSLCBLAS_INCLUDE_DIRS})
#set(LIBS ${LIBS} ${GSL_LIBRARIES} ${GSLCBLAS_LIBRARIES})
add_executable(scrub ${SOURCE})
target_link_libraries(scrub glog)
