cmake_minimum_required(VERSION 2.6)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}")
SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
SET(GCC_COVERAGE_LINK_FLAGS "-pthread -Wl,-rpath -Wl,/home/mzhou/mylib/openmpi/lib -Wl,--enable-new-dtags -L/home/mzhou/mylib/openmpi/lib -lmpi_cxx -lmpi -lopen-rte -lopen-pal -lutil -lnsl -ldl -lmca_common_sm -lvt -Wl,--export-dynamic")
SET( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}" )

PROJECT(option)
set(common_mod_path "../common")
set(boost_home "/home/mzhou/Downloads/boost_1_60_0")
FILE(GLOB SOURCE "./test_split.cpp" "${common_path}/*.cpp")
INCLUDE_DIRECTORIES("/home/mzhou/mylib/openmpi/include" ${boost_home} ${common_path} "../")
LINK_DIRECTORIES("/home/mzhou/mylib/openmpi/lib" "${boost_home}/stage/lib")
SET(LIBS ${LIBS} "${boost_home}/stage/lib")
#find_package(GSL REQUIRED)
#include_directories(${GSL_INCLUDE_DIRS} ${GSLCBLAS_INCLUDE_DIRS})
#set(LIBS ${LIBS} ${GSL_LIBRARIES} ${GSLCBLAS_LIBRARIES})
#link_libraries(${LIBS})
add_executable(mpi_rw_test "mpi_rw.cpp")
add_executable(split_str_test "split_str.cpp")
#add_executable(recblk_test "recblk_test.cpp" )
add_executable(timer_test "timer_test.cpp" )
#target_link_libraries(recblk_test boost_date_time)
target_link_libraries(timer_test boost_date_time)
#target_link_libraries(optest ${LIBS})
